@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DashProfiler
-version:      1.05
+version:      1.06
 version_from: lib/DashProfiler.pm
 installdirs:  site
 requires:
@@ -9,4 +9,4 @@ requires:
     Test::More:                    0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+generated_by: ExtUtils::MakeMaker version 6.17
